Arreglo de problemas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Evaluación 1 (Taller de nuevas tecnologías)</string>
+    <string name="s"><![CDATA[<]]></string>
 </resources>
